<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="41dp"
        android:text="@string/txtv_nombre" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="46dp"
        android:text="@string/txt_contra" />

    <EditText
        android:id="@+id/etxtContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/etxtNombreC"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/etxtRContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/etxtContra"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etxtNombreC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etxtCorreoC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/etxtNombreC"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/etxtNombreC"
        android:layout_marginTop="40dp"
        android:text="@string/txtv_correo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etxtContra"
        android:layout_marginTop="37dp"
        android:layout_toLeftOf="@+id/etxtRContra"
        android:text="@string/txtv_rcorreo" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etxtRContra"
        android:layout_marginTop="44dp"
        android:layout_toLeftOf="@+id/etxtRContra"
        android:text="@string/btn_ok"
        android:onClick="aceptar"
         />

</RelativeLayout>
