<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fbook.MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etxtCorreo"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="33dp"
        android:text="@string/txtv_pass" />

    <EditText
        android:id="@+id/etxtPassL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnCanceL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnAceptarL"
        android:layout_alignBottom="@+id/btnAceptarL"
        android:layout_alignRight="@+id/etxtPassL"
        android:layout_marginRight="18dp"
        android:text="@string/txtv_crear"
        android:onClick="crear"
         />

    <Button
        android:id="@+id/btnAceptarL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etxtPassL"
        android:layout_below="@+id/etxtPassL"
        android:layout_marginTop="41dp"
        android:text="@string/btn_ok" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp"
        android:text="@string/txtv_correo" />

    <EditText
        android:id="@+id/etxtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/etxtPassL"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textEmailAddress" />

</RelativeLayout>